; ModuleID = '/home/carl/AnghaBench/vlc/modules/audio_output/extr_pulse.c_context_cb.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/audio_output/extr_pulse.c_context_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i32* }

@PA_SUBSCRIPTION_EVENT_FACILITY_MASK = common dso_local global i32 0, align 4
@PA_SUBSCRIPTION_EVENT_TYPE_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32, i8*)* @context_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @context_cb(i32* %0, i32 %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca %struct.TYPE_3__*, align 8
  %10 = alloca %struct.TYPE_4__*, align 8
  %11 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %12 = load i8*, i8** %8, align 8
  %13 = bitcast i8* %12 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %13, %struct.TYPE_3__** %9, align 8
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 0
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %15, align 8
  store %struct.TYPE_4__* %16, %struct.TYPE_4__** %10, align 8
  %17 = load i32, i32* %6, align 4
  %18 = load i32, i32* @PA_SUBSCRIPTION_EVENT_FACILITY_MASK, align 4
  %19 = and i32 %17, %18
  store i32 %19, i32* %11, align 4
  %20 = load i32, i32* @PA_SUBSCRIPTION_EVENT_TYPE_MASK, align 4
  %21 = load i32, i32* %6, align 4
  %22 = and i32 %21, %20
  store i32 %22, i32* %6, align 4
  %23 = load i32, i32* %11, align 4
  switch i32 %23, label %49 [
    i32 129, label %24
    i32 128, label %30
  ]

24:                                               ; preds = %4
  %25 = load i32*, i32** %5, align 8
  %26 = load i32, i32* %6, align 4
  %27 = load i32, i32* %7, align 4
  %28 = load i8*, i8** %8, align 8
  %29 = call i32 @sink_event(i32* %25, i32 %26, i32 %27, i8* %28)
  br label %51

30:                                               ; preds = %4
  %31 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %32 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %31, i32 0, i32 0
  %33 = load i32*, i32** %32, align 8
  %34 = icmp ne i32* %33, null
  br i1 %34, label %35, label %48

35:                                               ; preds = %30
  %36 = load i32, i32* %7, align 4
  %37 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %38 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %37, i32 0, i32 0
  %39 = load i32*, i32** %38, align 8
  %40 = call i32 @pa_stream_get_index(i32* %39)
  %41 = icmp eq i32 %36, %40
  br i1 %41, label %42, label %48

42:                                               ; preds = %35
  %43 = load i32*, i32** %5, align 8
  %44 = load i32, i32* %6, align 4
  %45 = load i32, i32* %7, align 4
  %46 = load i8*, i8** %8, align 8
  %47 = call i32 @sink_input_event(i32* %43, i32 %44, i32 %45, i8* %46)
  br label %48

48:                                               ; preds = %42, %35, %30
  br label %51

49:                                               ; preds = %4
  %50 = call i32 (...) @vlc_assert_unreachable()
  br label %51

51:                                               ; preds = %49, %48, %24
  ret void
}

declare dso_local i32 @sink_event(i32*, i32, i32, i8*) #1

declare dso_local i32 @pa_stream_get_index(i32*) #1

declare dso_local i32 @sink_input_event(i32*, i32, i32, i8*) #1

declare dso_local i32 @vlc_assert_unreachable(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
